manifests/cluster-keycloak/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  namespace: showks-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "keycloak"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - keycloak.stg.showks.cloudnativedays.jp
      secretName: default/tls-certificate
  rules:
  - host: keycloak.stg.showks.cloudnativedays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak-http
          servicePort: 80
